--- a/portal-frontend/src/app/shared/optional-attachments-mobile-card/optional-attachments-mobile-card.component.scss
+++ b/portal-frontend/src/app/shared/optional-attachments-mobile-card/optional-attachments-mobile-card.component.scss
@@ -5,6 +5,8 @@ mat-card {
   border-bottom: 1px solid #AAAAAA;
   border-radius: 0;
   background-color: transparent;
+  word-wrap: break-word;
+  white-space: normal;
 }
 
 mat-card-header {
